<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dragon"
        />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_correo"
            android:textAlignment="center"
            android:hint="@string/txt_correo"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_clave"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/txt_clave"
            android:layout_margin="10dp"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_iniciar"
        android:text="@string/btn_iniciar"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_facebook"
            android:background="@drawable/facebook"
            android:layout_margin="10dp"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_gmail"
            android:background="@drawable/gmail"
            android:layout_margin="10dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_registro"
        android:text="@string/Registrarme"
        android:layout_marginLeft="15dp"

        />

        <TextView
            android:id="@+id/lbl_Ol_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Olvidaste"
            android:layout_marginLeft="185dp"

            />
    </LinearLayout>

</LinearLayout>

</LinearLayout>